# spline_filter

./: .gitignore  README.md  demonstration.ipynb  main.py  new.py  pyproject.toml
src/: main.py  new.py
tests/: test_spline.py
