[tool.poetry]
name = "spline_filter"
version = "0.1.0"
description = ""
authors = ["Landon Work <landon.r.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
matplotlib = "^3.6.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
